--- a/index.html
+++ b/index.html
@@ -51,34 +51,34 @@
 		<div class="feature-content">
 			<div class="row">
 				<div class="row-img">
-					<img src="images/ew.jpg">
+					<img src="ew.jpg">
 			</div>
 			<h4>ICT Group 2</h4>
 		</div>
 			<div class="row">
 				<div class="row-img">
-					<img src="images/ky.jpg">
+					<img src="ky.jpg">
 			</div>
 			<h4>Kyre Columa</h4>
 		</div>
 
 			<div class="row">
 				<div class="row-img">
-					<img src="images/vince.jpg">
+					<img src="vince.jpg">
 			</div>
 			<h4>Vince Cardenas</h4>
 		</div>
 
 			<div class="row">
 				<div class="row-img">
-					<img src="images/lawrence.jpg">
+					<img src="lawrence.jpg">
 			</div>
 			<h4>Lawrence Galvez</h4>
 		</div>
 
 			<div class="row">
 				<div class="row-img">
-					<img src="images/ace.jpg">
+					<img src="ace.jpg">
 			</div>
 			<h4>Adrian Santiago</h4>
 		</div>
@@ -88,7 +88,7 @@
 
 <section class="harana">
 	<div class="harana-img">
-		<img src="images/picture2.png">
+		<img src="picture2.png">
 	</div>
 
 	<div class="harana-text">
@@ -106,13 +106,13 @@
 
 	<div class="tours-content">
 		<div class="box">
-			<img src="images/putik.jpg">
+			<img src="putik.jpg">
 			<h6>Aliaga, Nueva Ecija</h6>
 			<h4>Taong Putik Festival</h4>
 		</div>
 
 		<div class="box">
-			<img src="images/rode.jpg">
+			<img src="rode.jpg">
 			<h6>Masbate City, Masbate</h6>
 			<h4>Rodeo Masbateño</h4>
 		</div>
@@ -120,7 +120,7 @@
 
 
 		<div class="box">
-			<img src="images/fert.jpg">
+			<img src="fert.jpg">
 			<h6>Obando, Bulacan</h6>
 			<h4>Obando Fertility Rites</h4>
 		</div>
@@ -140,7 +140,7 @@
 	</div>
 
 	<div class="Culture-img">
-		<img src="images/harana.jpg">
+		<img src="harana.jpg">
 </section>
 
 <section class="newsletter">
