--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<div class="row-img">
 					<img src="ew.jpg">
 			</div>
-			<h4>ICT Group 2</h4>
+			<h4>ICT Group 1</h4>
 		</div>
 			<div class="row">
 				<div class="row-img">
@@ -188,7 +188,7 @@
 </section>
 
 <div class="Copyright">
-	<p>Made By ICT Group 2</p>
+	<p>Presented By ICT Group 1</p>
 </div>
 	<script src="script.js"></script>
 </body>
