--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<div class="row-img">
 					<img src="vince.jpg">
 			</div>
-			<h4>Vince Cardenas</h4>
+			<a href="https://www.facebook.com/vince.cardenas.31"><h4>Vince Cardenas</h4></a>
 		</div>
 
 			<div class="row">
