--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
 			<div class="row">
 				<div class="row-img">
-					<img src="vince.jpg">
+					<a href="https://www.facebook.com/vince.cardenas.31"><img src="vince.jpg"></a>
 			</div>
-			<a href="https://www.facebook.com/vince.cardenas.31"><h4>Vince Cardenas</h4></a>
+			<h4>Vince Cardenas</h4>
 		</div>
 
 			<div class="row">
